<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.alikeyou</groupId>
        <artifactId>IT</artifactId>
        <version>0.0.1-SNAPSHOT</version>
        <!-- relativePath 指向父 POM，../ 表示上一级目录 -->
        <relativePath>../pom.xml</relativePath>
    </parent>
    <groupId>com.alikeyou</groupId>
    <artifactId>it-module-circle</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>it-module-circle</name>
    <description>it-module-circle</description>
    <url/>
    <licenses>
        <license/>
    </licenses>
    <developers>
        <developer/>
    </developers>
    <scm>
        <connection/>
        <developerConnection/>
        <tag/>
        <url/>
    </scm>
    <properties>
        <java.version>17</java.version>
    </properties>
    <dependencies>
        <!-- 添加对it-module-common模块的依赖 -->
        <dependency>
            <groupId>com.alikeyou</groupId>
            <artifactId>it-module-common</artifactId>
            <version>0.0.1-SNAPSHOT</version>
        </dependency>

        <dependency>
            <groupId>com.alikeyou</groupId>
            <artifactId>it-module-login</artifactId>
            <version>0.0.1-SNAPSHOT</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>

        </plugins>
    </build>

</project>
